maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:32: error: not found: value indication
indication(11,5,0) 
^